# nanobanana-cli

./: .acpxrc.json  .gitignore  README.md  nanobanana-cli-设计方案.md  nanobanana.md  pyproject.toml
src/nanobanana/: __main__.py  gemini.py  server.py  session.py
